# grok

./: .clinerules  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  appveyor.yml  build.zig  build.zig.zon  build_all_zig.sh  cliff.toml  grok.patterns  grok.sln  justfile  linux_build.sh  linux_build_zig.sh  lunux_build.sh  mise.toml  musl.sh  osx_build.sh  skills-lock.json
.agents/skills/zig-0.16/: SKILL.md
.agents/skills/zig-best-practices/: SKILL.md
.agents/skills/zig-comptime/: SKILL.md
.agents/skills/zig-debugging/: SKILL.md
.agents/skills/zig-debugging/references/: zig-debug-patterns.md
.chglog/: config.yml
.github/workflows/: build.yml  ccpp.yml  ci_build.yml  cleanup.yml  ubuntu.yml  windows.yml
cmake/: zig-toolchain-aarch64-linux-musl.cmake  zig-toolchain-aarch64-macos-none.cmake  zig-toolchain-x86_64-linux-gnu.cmake  zig-toolchain-x86_64-linux-musl.cmake  zig-toolchain-x86_64-macos-none.cmake  zig-toolchain-x86_64-windows-gnu.cmake
grok/: backend.c  backend.h  configuration.c  configuration.h  frontend.c  frontend.h  grok.c  grok.flex.c  grok.lex  grok.rc  grok.tab.c  grok.tab.h  grok.vcxproj  grok.y  targetver.h
patterns/: custom.patterns  grok.patterns  linuxsyslog.patterns  webservers.patterns
src/: backend.zig  configuration.zig  encoding.zig  frontend.h  frontend.zig  fuzz.zig  fuzz_encoding.zig  fuzz_string.zig  grok.h  grok.sln  grok.zig  integration_test.zig  lib.c  line_reader.zig  main.zig  matcher.zig  printer.zig  regex.zig  utf8_console.zig
src/_tst/: BufferedTest.cpp  BufferedTest.h  SizeToString.cpp  SizeToString.h  ToStringTime.cpp  ToStringTime.h  _tst.cpp  apr_test_fixture.h  encoding.cpp  lib.cpp  lib_test.cpp  size_to_string.cpp  time_to_string.cpp  trim_tests.cpp
src/apr/include/: apr.h
src/argtable/: argtable.vcxproj  argtable2.c  argtable2.h  getopt.c  getopt.h
src/grok/: backend.c  backend.h  c.h  configuration.c  configuration.h  frontend.c  frontend.h  grok.c  grok.h  grok.lex  grok.rc  grok.vcxproj  grok.y  lib.c  lib.h  pattern.c  pattern.h  resource.h  targetver.h
src/pcre/: config.h  pcre.vcxproj  pcre2_tables.c
src/srclib/: argtable3.c  argtable3.h  dbg_helpers.c  dbg_helpers.h  encoding.c  encoding.h  lib.c  lib.h  sort.c  sort.h  types.h
srclib/: DebugHelplers.h  dbg_helpers.c  lib.c  lib.h
test_assets/: bad_nested.patterns  circular.patterns
tools/: archiver.zig
