cmake_minimum_required(VERSION 3.27)
project(grok)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_definitions(-DARCH="${CMAKE_SYSTEM_PROCESSOR}")

if ("$ENV{GROK_VERSION}" STREQUAL "")
    add_definitions(-DPRODUCT_VERSION="0.3.0")
    set(CPACK_PACKAGE_VERSION "0.3.0")
else ()
    if ("$ENV{GROK_VERSION}" STREQUAL "master")
        add_definitions(-DPRODUCT_VERSION="0.3.0-$ENV{CI_BUILD_NUMBER}")
        set(CPACK_PACKAGE_VERSION "0.3.0-$ENV{CI_BUILD_NUMBER}")
    else ()
        add_definitions(-DPRODUCT_VERSION="$ENV{GROK_VERSION}")
        set(CPACK_PACKAGE_VERSION "$ENV{GROK_VERSION}")
    endif ()
endif ()

set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
set(CPACK_PACKAGE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
    set(CPACK_SYSTEM_NAME  x86_64-windows-msvc)
    set(GROK grok.exe)
elseif ("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin" AND "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")
    set(CPACK_SYSTEM_NAME  x86_64-macos-none)
    set(GROK grok)
elseif ("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin" AND "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64")
    set(CPACK_SYSTEM_NAME  aarch64-macos-none)
    set(GROK grok)
elseif ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux" AND "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64")
    set(CPACK_SYSTEM_NAME  aarch64-linux-musl)
    set(GROK grok)
elseif ("${CMAKE_TOOLCHAIN_FILE}" MATCHES "zig-toolchain-x86_64-linux-musl")
    set(CPACK_SYSTEM_NAME  x86_64-linux-musl)
    set(GROK grok)
elseif ("${CMAKE_TOOLCHAIN_FILE}" MATCHES "zig-toolchain-x86_64-linux-gnu")
    set(CPACK_SYSTEM_NAME  x86_64-linux-gnu)
    set(GROK grok)
else()
    set(CPACK_SYSTEM_NAME  x86_64-linux-gnu)
    set(GROK grok)
endif()

SET(LICENSE_FILE "LICENSE.txt")
SET(EXE_FILE "${CMAKE_CURRENT_SOURCE_DIR}/zig-out/bin-${CPACK_SYSTEM_NAME}/${GROK}")

file(GLOB PATTERN_FILES "patterns/*.patterns")

install(FILES ${EXE_FILE} DESTINATION . COMPONENT application)
install(FILES ${PATTERN_FILES} DESTINATION . COMPONENT patterns)
install(FILES ${LICENSE_FILE} DESTINATION . COMPONENT license)

set(CPACK_GENERATOR     TGZ)
set(CPACK_STRIP_FILES TRUE)
include(CPack)

cpack_add_component(application)
cpack_add_component(patterns)
cpack_add_component(license)